--- a/style.css
+++ b/style.css
@@ -52,4 +52,29 @@ nav ul{
         color: black;
         background-color: rgb(78, 71, 255);
     }
+    .section-1{
+        display: flex;
+        justify-content: space-between;
+        padding: 100px 200px;
+        
+       
+    }
+    
+    .text{
+       border: 1px dotted;
+        width: 300px;
+        height: 250px;
+        text-align: center;
+        border: none;
+        
+
+    }
+    .img{
+      border: 5px solid;
+       border-radius: 20px;
+       box-shadow: 10px 10px 10px;
+        
+        
+
+    }
 
